--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /* 
-	html5doctor.com Reset v1.6.1 (http://html5doctor.com/html-5-reset-stylesheet/) - http://cssreset.com 
+    html5doctor.com Reset v1.6.1 (http://html5doctor.com/html-5-reset-stylesheet/) - http://cssreset.com 
 */
 @import url(//fonts.googleapis.com/css?family=Inconsolata:400,700);
 @import url(//fonts.googleapis.com/css?family=PT+Serif:400,700);
@@ -12,23 +12,6 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
   font-size: 100%;
   vertical-align: baseline;
   background: transparent; }
-
-dl {
-  margin-top: 0.75em;
-}
-
-dt {
-  margin-top: 0.5em;
-}
-
-dd {
-  margin-left: 1.5em;
-}
-
-div.MathJax_Display {
-  overflow-x: auto;
-  overflow-y: hidden;
-}
 
 body {
   line-height: 1; }
@@ -92,10 +75,10 @@ input, select {
     color definitions
 */
 /*
-	sizes
+    sizes
 */
 /*
-	other variables
+    other variables
 */
 #archiveMenu, #archiveMenu2 {
   position: relative; }
@@ -155,7 +138,7 @@ input, select {
       display: inline; }
 
 /*
-	link formatting
+    link formatting
 */
 a {
   color: #789;
@@ -201,7 +184,7 @@ a[href^="http://"]:after {
   vertical-align: bottom; }
 
 /*
-	other formatting
+    other formatting
 */
 address {
   font-style: normal; }
@@ -220,14 +203,26 @@ code, tt {
   border: 1px solid #808080;
   display: inline;
   padding: 0em 0.25em; }
-  code.hasJax {
+  code.hasJax, tt.hasJax {
     background-color: transparent;
     border: none;
     padding: 0em; }
 
+dd {
+  margin-left: 1.5em; }
+
+div.MathJax_Display {
+  overflow-x: auto;
+  overflow-y: hidden; }
+
 div.section {
-  margin-top: 1.5em;
-}
+  margin-top: 1.5em; }
+
+dl {
+  margin-top: 0.75em; }
+
+dt {
+  margin-top: 0.5em; }
 
 em {
   font-weight: bold;
@@ -274,7 +269,7 @@ p:last-child {
 
 p.paginator {
   border-top: 1px solid black;
-  margin-top: 2em; 
+  margin-top: 2em;
   padding-top: 1.5em; }
 
 section h1 {
@@ -316,12 +311,6 @@ ul.noBullet {
   -o-border-radius: 50%;
   -webkit-border-radius: 50%;
   border-radius: 50%; }
-
-.aperture2 {
-  background-color: white;
-  border: 1px solid black;
-  padding: 0.5em;
-}
 
 .bold {
   font-weight: bold; }
@@ -368,10 +357,10 @@ ul.noBullet {
   vertical-align: middle; }
 
 /*
-	webfonts
+    webfonts
 */
 /*
-	local fonts
+    local fonts
 */
 /* Genericons */
 @font-face {
@@ -381,9 +370,9 @@ ul.noBullet {
   font-weight: normal;
   font-style: normal; }
 /*
-    ===============================
-    basic layout and style settings
-    ===============================
+	===============================
+	basic layout and style settings
+	===============================
 */
 * {
   -ms-box-sizing: border-box;
@@ -411,9 +400,9 @@ body {
   width: 100%; }
 
 /*
-    ==========
-    basic tags
-    ==========
+	==========
+	basic tags
+	==========
 */
 #contentTable {
   display: block;
@@ -497,7 +486,7 @@ section {
     content: "> "; }
 
 /*
-    media queries
+	media queries
 */
 /* when the screen width is lower than 1280px use the entire width */
 @media all and (max-width: 1279px) {
@@ -506,8 +495,8 @@ section {
     min-width: 0px;
     width: 100%; } }
 /* 
-    when the screen width is lower than 800px or in case of a display
-    in portrait mode show <aside> below <main> 
+	when the screen width is lower than 800px or in case of a display
+	in portrait mode show <aside> below <main> 
 */
 @media all and (max-width: 799px), all and (orientation: portrait) {
   /* use full width */
